--- a/gitfolder3/package.json
+++ b/gitfolder3/package.json
@@ -5,3 +5,14 @@ echo '{
         "react": "^18.0.0"
   }
 }' >> package.json
+
+echo '{
+  "name": "my-project",
+  "version": "1.0.0",
+  "dependencies": {
+    "react": "^18.0.0"
+  },
+  "scripts": {
+    "start": "react-scripts start"
+  }
+}' >> package.json
